<resources>
    <string name="app_name">Splatournament-Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="no_account">No Account?</string>
    <string name="invalid_usrname_pass">Username or Password is Invalid!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="weapons">Weapons</string>
    <string name="splattershot">splattershot</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="account_already_exists">Account Already Exists!</string>
    <string name="tournaments">Tournaments</string>
    <string name="dummy">dummy</string>
    <string name="tournamentname">TournamentName</string>
    <string name="tournamentstyle">TournamentStyle</string>
    <string name="tournamentteamcounter">tournamentTeamCounter</string>
    <string name="createdbyname">CreatedByName</string>
    <string name="enter_tournament">Enter Tournament</string>
    <string name="profile">Profile</string>
    <string name="edit_previous">Edit Previous</string>
    <string name="edit_next">Edit Next</string>
    <string name="we_won">We Won</string>
    <string name="create_team">Create Team</string>
    <string name="join_team">Join Team</string>
    <string name="name_of_the_team">Name of the Team</string>
    <string name="create_and_join">Create and Join</string>
    <string name="join">Join</string>
    <string name="join_a_team">Join a Team</string>
    <string name="finish">Finish</string>
    <string name="results">Results:</string>
    <string name="home">Home</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="create_a_team">Create a Team</string>
</resources>